--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- Add <a href="https://www.freepik.com/vectors/coder">Coder vector created by upklyak - www.freepik.com</a> in footer for credit -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,7 +15,7 @@
       src="https://kit.fontawesome.com/7cacb6feb1.js"
       crossorigin="anonymous"
     ></script>
-    <title>Final</title>
+    <title>Rahul Bajaj Portfolio</title>
   </head>
   <body>
     <header>
